Fixed calendar wrapping when the browser window's width is less than the calendar width + the calendar selection div width.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,6 +40,7 @@ header {
   margin-left: auto;
   float: left;
   display: inline;
+  position: fixed;
 }
 .shared-calendars {
   float: left;
